# o-rs-u

./: .gitignore  Cargo.toml  mirage.osu  readme.md  todo.txt
.cargo/: config.toml
assets/beatmap_extract/440169 Goose house - Hikaru nara.osz/: Goose house - Hikaru Nara (ProfessionalBox).osb
assets/beatmaps/: bad_wolves.osu  mirage_easy.osu  mirage_hard.osu
assets/skins/particles/: great.ron  meh.ron  miss.ron  ok.ron  tick_hit.ron  tick_miss.ron  tick_ok.ron
src/: main.rs
src/beatmaps/: mod.rs
src/circles/: mod.rs
src/circles/bezier/: mod.rs
src/circles/catmull/: mod.rs
src/circles/clicking/: mod.rs
src/circles/etc/: mod.rs
src/circles/pausing/: mod.rs
src/circles/rings/: mod.rs
src/circles/scoring/: mod.rs
src/circles/sliders/: mod.rs
src/cli/: mod.rs
src/game_debug/: mod.rs
src/mouse_pos_system/: mod.rs
src/osuparser/: mod.rs
src/osuparser/unzipper/: mod.rs
src/public_resources/: mod.rs
