[package]
name = "o-rs-u"
version = "0.1.7"
edition = "2024"

[dependencies]
bevy = {version="0.18.1", features=["mp3", "flac", "wav", "debug", "jpeg"]}
rand = "0.10.1"
bevy_window = "0.18.1"
bevy_image = "0.18.1"
bevy_vello = {version="0.13.1", features = ["svg"]}
bevy_enoki = "0.6.0"
thiserror = "2.0.18"
zip = "8.6.0"

[profile.dev.package."*"]
opt-level = 3

[features]
profiling = ["bevy/trace", "bevy/trace_chrome"]
